--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.65.1",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.8.0"
+    "react-native-screens": "^3.8.0",
+    "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
